--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="gameboard">
-        <div>x</div>
-        <div>x</div>
-        <div>x</div>
-        <div>o</div>
-        <div>x</div>
-        <div>o</div>
-        <div>o</div>
-        <div>o</div>
-        <div>o</div>
+    <div id="gameboard">
     </div>
     <script src="./script.js"></script>
 </body>
